docs: added a comment to the app.css file

--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
-# we are in the app.css content (new line)
+# we are in the documentation branch
 # app.css content
 html {
     box-sizing: border-box;
