--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
-# we are in the documentation branch
+# we are in the documentation branch now
 # app.css content
 html {
     box-sizing: border-box;
