--- a/app.css
+++ b/app.css
@@ -1,4 +1,5 @@
 # we are in the documentation branch now
+# we are editing in the documentation branch
 # app.css content
 html {
     box-sizing: border-box;
