docs: updated the app.css file

--- a/app.css
+++ b/app.css
@@ -1,5 +1,6 @@
 # we are in the documentation branch now
 # we are editing in the documentation branch
+######################
 # app.css content
 html {
     box-sizing: border-box;
